site-plan content

--- a/site-plan.html
+++ b/site-plan.html
@@ -88,9 +88,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="./index.html">Home</a>
+        <a href="#">Biomes Guide</a>
+        <a href="#">Boss Fights</a>
       </nav>
       <hr>
       <h2>
@@ -101,10 +101,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Biomes Guide<!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Boss Fights  <!-- change this -->
         </div>
 
         <div class="top">
@@ -126,30 +126,59 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Valheim is an open world game that can seem complex and hard if you don't have any guidance.
+        Luckily You have just found the guidance you need. Morty's guide to valheim is made to help
+        players new and experienced to take their understanding and strategy to the next level.
+      </p>
+      <p>
+        *different images and titles that are hyperlinks to different parts of the other pages*
       </p>
       <p>Images for the Home page</p>
         <img src="#" alt="image for homepage">
         <img src="#" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Biomes Guide</h3>
       <p>
-        [Written copy for the Page 2 here]
+        On this page you will find the different biomes with warnings, descriptions, common wildlife,
+        common enimies, materials from plants to ores, and larger bosses.
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
-
-      </ul>
-      <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        these elements will be filled out for
+      </p>
+      <ul>
+        <li>the meadows</li>
+        <li>the black forest</li> 
+        <li>the swamp</li> 
+        <li>mountains</li> 
+        <li>the plains</li> 
+        <li>the ocean</li> 
+      </ul>
+      <p>Images for the Page 2</p>
+        <div class="images">
+          <img src="./images/meadows.jpg" alt="meadows">
+          <img src="./images/blackforest.jpg" alt="blackforest">
+          <img src="./images/swamp.jpg " alt="swamp">
+          <img src="./images/mountains.jpg" alt="mountains">
+          <img src="./images/plains.jpg" alt="plains">
+          <img src="./images/oceans.jpg" alt="oceans">
+        </div>
+      </ul>
+      <h3>Boss Fights</h3>
+      <p>
+        on this page you will find useful information about the bosses that you will fight during your time playing valheim. 
+        information such as a brief synapse of the boss, their health, their elemental resitances, and the kinds of debuffs 
+        they might inflict on you. you will also find a recommended weapon to use to fight each boss based on materials you
+         can get at the time or that should be aquired before fighting the boss.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
-
+        <div class="images">
+          <img src="./images/eikthyr.jpg" alt="eikthyr">
+          <img src="./images/elder.jpg" alt="elder">
+          <img src="./images/bonemass.jpg" alt="bonemass">
+          <img src="./images/moder.jpg" alt="moder">
+          <img src="./images/yagluth.jpg" alt="yagluth">
+        </div>
       </ul>
       <hr>
       <h2>
