site-plan content

--- a/site-plan.html
+++ b/site-plan.html
@@ -134,9 +134,19 @@
         *different images and titles that are hyperlinks to different parts of the other pages*
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
-
+        <div class="images">
+          <img src="./images/meadows.jpg" alt="meadows">
+          <img src="./images/blackforest.jpg" alt="blackforest">
+          <img src="./images/swamp.jpg " alt="swamp">
+          <img src="./images/mountains.jpg" alt="mountains">
+          <img src="./images/plains.jpg" alt="plains">
+          <img src="./images/oceans.jpg" alt="oceans">
+          <img src="./images/eikthyr.jpg" alt="eikthyr">
+          <img src="./images/elder.jpg" alt="elder">
+          <img src="./images/bonemass.jpg" alt="bonemass">
+          <img src="./images/moder.jpg" alt="moder">
+          <img src="./images/yagluth.jpg" alt="yagluth">
+        </div>
       </ul>
       <h3>Biomes Guide</h3>
       <p>
