--- a/site-plan.html
+++ b/site-plan.html
@@ -201,8 +201,8 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
-
+      <img src="./images/homesiteplan1.jpg" alt="home page wireframe">
+      <img src="./images/homesiteplan2.jpg" alt="home page wireframe">
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
