site-plan wireframes

--- a/site-plan.html
+++ b/site-plan.html
@@ -207,13 +207,19 @@
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
-
+      <img src="./images/biomesiteplan1.jpg" alt="Biome Guide Wireframe">
+      <img src="./images/biomesiteplan2.jpg" alt="Biome Guide Wireframe">
+      <img src="./images/biomesiteplan3.jpg" alt="Biome Guide Wireframe">
+      <img src="./images/biomesiteplan4.jpg" alt="Biome Guide Wireframe">
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="./images/bossessiteplan1.jpg" alt="Boss Fights wireframe">
+      <img src="./images/bossessiteplan2.jpg" alt="Boss Fights wireframe">
+      <img src="./images/bossessiteplan2.jpg" alt="Boss Fights wireframe">
+      <img src="./images/bossessiteplan2.jpg" alt="Boss Fights wireframe">
+      <img src="./images/bossessiteplan3.jpg" alt="Boss Fights wireframe">
     </main>
   </body>
 
