site-plan wireframes

--- a/site-plan.html
+++ b/site-plan.html
@@ -199,13 +199,13 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        When you hover over the images they will grow
       </p>
       <img src="./images/homesiteplan1.jpg" alt="home page wireframe">
       <img src="./images/homesiteplan2.jpg" alt="home page wireframe">
       <h3>[Page 2]</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        the warning section may or may no be there
       </p>
       <img src="./images/biomesiteplan1.jpg" alt="Biome Guide Wireframe">
       <img src="./images/biomesiteplan2.jpg" alt="Biome Guide Wireframe">
@@ -213,7 +213,7 @@
       <img src="./images/biomesiteplan4.jpg" alt="Biome Guide Wireframe">
       <h3>[Page 3]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        should be self explainitory
       </p>
       <img src="./images/bossessiteplan1.jpg" alt="Boss Fights wireframe">
       <img src="./images/bossessiteplan2.jpg" alt="Boss Fights wireframe">
