--- a/index.html
+++ b/index.html
@@ -4,9 +4,94 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valheim Calculator</title>
+    <title>Morty's Guide | Homepage</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    
+    <header>
+        <a id= "logo-link" href="index.html">
+            <img class="logo" src="./images/mortyslogo.jpg" alt="Morty's Guide Logo">
+        </a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="biomes.html">Biome Guide</a>
+            <a href="bosses.html">Boss Guide</a>
+        </nav>
+    </header>
+    <main>
+        <div class="home-description">
+            <h1>VALHEIM</h1>
+            <p>Valheim is an open world game that can seem complex and hard if you don't have any guidance.
+                Luckily, you have just found the guidance you need. Morty's guide to Valheim is made to help
+                players new and experienced to take their understanding and strategy to the next level.
+            </p>
+        </div>
+
+        <div class="biomes-home">
+            <div class="background-c60000" id="background-biomes-home"></div>
+            <h3>BIOMES</h3>
+            <p>Biomes in Valheim can be treterous and unforgiving here you can explore the different 
+                biomes and learn more about them.
+            </p>
+            <div class="image-with-text" id="meadows-home">
+                <h6><span>MEADOWS</span></h6>
+                <img src="./images/meadows.jpg" alt="Meadows Biome">
+            </div>
+            <div class="image-with-text" id="black-forest-home">
+                <h6><span>BLACK FOREST</span></h6>
+                <img src="./images/blackforest.jpg" alt="Black Forest Biome">
+            </div>
+            <div class="image-with-text" id="swamp-home">
+                <h6><span>SWAMP</span></h6>
+                <img src="./images/swamp.jpg" alt="Swamp Biome">
+            </div>
+            <div class="image-with-text" id="mountains-home">
+                <h6><span>MOUNTAINS</span></h6>
+                <img src="./images/mountains.jpg" alt="Mountain Biome">
+            </div>
+            <div class="image-with-text" id="plains-home">
+                <h6><span>PLAINS</span></h6>
+                <img src="./images/plains.jpg" alt="Plains Biome">
+            </div>
+            <div class="image-with-text" id="oceans-home">
+                <h6><span>OCEANS</span></h6>
+                <img src="./images/oceans.jpg" alt="Oceans Biome">
+            </div>
+        </div>
+
+        <div class="bosses-home">
+            <div class="background-c60000" id="background-bosses-home"></div>
+            <h3>BOSSES</h3>
+            <p>
+                Before any boss fight it is important know your enemy. Here you will find critical information
+                that will lead you to victory against these foes.
+            </p>
+            <div class="image-with-text" id="eikthyr-home">
+                <h6><span>EIKTHYR</span></h6>
+                <img src="./images/eikthyr.jpg" alt="Eikthyr Boss">
+            </div>
+            <div class="image-with-text" id="elder-home">
+                <h6><span>ELDER</span></h6>
+                <img src="./images/elder.jpg" alt="Elder Boss">
+            </div>
+            <div class="image-with-text" id="bonemass-home">
+                <h6><span>BONEMASS</span></h6>
+                <img src="./images/bonemass.jpg" alt="Bonemass Boss">
+            </div>
+            <div class="image-with-text" id="moder-home">
+                <h6><span>MODER</span></h6>
+                <img src="./images/moder.jpg" alt="Moder Boss">
+            </div>
+            <div class="image-with-text" id="yagluth-home">
+                <h6><span>YAGLUTH</span></h6>
+                <img src="./images/yagluth.jpg" alt="Yagluth Boss">
+            </div>
+        </div>
+    </main>
+    <footer>
+        <a href="biomes.html">Biome Guide</a>
+        <a href="bosses.html">Boss Guide</a>
+        <a href="site-plan.html">Site Plan</a>        
+    </footer>
 </body>
 </html>
