--- a/site-plan.html
+++ b/site-plan.html
@@ -203,7 +203,7 @@
       </p>
       <img src="./images/homesiteplan1.jpg" alt="home page wireframe">
       <img src="./images/homesiteplan2.jpg" alt="home page wireframe">
-      <h3>[Page 2]</h3>
+      <h3>Biome Guide</h3>
       <p>         
         the warning section may or may no be there
       </p>
@@ -211,7 +211,7 @@
       <img src="./images/biomesiteplan2.jpg" alt="Biome Guide Wireframe">
       <img src="./images/biomesiteplan3.jpg" alt="Biome Guide Wireframe">
       <img src="./images/biomesiteplan4.jpg" alt="Biome Guide Wireframe">
-      <h3>[Page 3]</h3>
+      <h3>Boss Fights</h3>
       <p>         
         should be self explainitory
       </p>
