html for website and css for subpage-1

--- a/bosses.html
+++ b/bosses.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morty's Guide | Boss Guide</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
@@ -17,21 +18,117 @@
             <a href="bosses.html">Boss Guide</a>
         </nav>
     </header>
-    <body>
-        <div class="">
+    <main>
+        <div class="bosses-body">
             <div class="page-description">
                 <h1>BOSS GUIDE</h1>
                 <p>Before any boss fight it is important know your enemy. Here you will find critical information
                     that will lead you to victory against these foes.</p>
             </div>
+            <div class="boss-section" id="eikthyr">
+                <div class="image-with-text">
+                    <h4><span>EIKTHYR</span></h4>
+                    <img src="./images/eikthyr.jpg" alt="Eikthyr Boss">
+                </div>
+                <div class="synopsis">
+                    <p>Eikthyr obviously watched Bambi and thought it was a true 
+                        story. With the power of lightning on his side it makes 
+                        him a formidable enemy. </p>
+                </div>
+                <div class="stats">
+                    <p class="left">Health:</p>
+                    <p>500</p>
+                    <p class="left">Resistances:</p>
+                    <p class="resistances">Blunt:   1.00<BR>Pierce:  1.00<BR>
+                        Slash:   1.00<BR>Frost:   1.00<BR>Fire:    1.00<BR>
+                        Poison:   1.00<BR>Spirit:  1.00</p>
+                    <p class="left">Weapon<br>Recommendation:</p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="boss-section" id="elder">
+                <div class="image-with-text">
+                    <h4><span>ELDER</span></h4>
+                    <img src="./images/elder.jpg" alt="Elder Boss">
+                </div>
+                <div class="synopsis">
+                    <p>I am Elder. I speak for the trees. And the trees are angry.</p>
+                </div>
+                <div class="stats">
+                    <p class="left">Health:</p>
+                    <p>2,500</p>
+                    <p class="left">Resistances:</p>
+                    <p class="resistances">Blunt:   1.00<BR>Pierce:  1.00<BR>Slash:   1.00<BR>
+                        Frost:   1.00<BR>Fire:    2.00<BR>Poison:   0.00<BR>Spirit:  0.00</p>
+                    <p class="left">Weapon<br>Recommendation:</p>
+                    <p>Finewood Bow with Fire Arrows</p>
+                </div>
+            </div>
+            <div class="boss-section" id="bonemass">
+                <div class="image-with-text">
+                    <h4><span>BONEMASS</span></h4>
+                    <img src="./images/bonemass.jpg" alt="Bonemass Boss">
+                </div>
+                <div class="synopsis">
+                    <p>This pile of slime and bones might look like a friend with his large 
+                        smile but going anywhere near him will cause you immediate harm.</p>
+                </div>
+                <div class="stats">
+                    <p class="left">Health:</p>
+                    <p>5,000</p>
+                    <p class="left">Resistances:</p>
+                    <p class="resistances">Blunt:   1.50<BR>Pierce:  0.25<BR>Slash:   0.50<BR>
+                        Frost:   1.50<BR>Fire:    0.25<BR>Poison:   0.00<BR>Spirit:  1.00</p>
+                    <p class="left">Weapon<br>Recommendation:</p>
+                    <p>Draugr Fang with Ice Arrows</p>
+                </div>
+            </div>
+            <div class="boss-section" id="moder">
+                <div class="image-with-text">
+                    <h4><span>MODER</span></h4>
+                    <img src="./images/moder.jpg" alt="Moder Boss">
+                </div>
+                <div class="synopsis">
+                    <p>It's a bird. It's a plane. It's a giant ice breathing dragon that wants 
+                        nothing more than to kill you.</p>
+                </div>
+                <div class="stats">
+                    <p class="left">Health:</p>
+                    <p>7,500</p>
+                    <p class="left">Resistances:</p>
+                    <p class="resistances">Blunt:   1.00<BR>Pierce:  1.00<BR>Slash:   1.00<BR>
+                        Frost:   0.00<BR>Fire:    1.50<BR>Poison:   1.00<BR>Spirit:  0.00</p>
+                    <p class="left">Weapon<br>Recommendation:</p>
+                    <p>Draugr Fang with Fire Arrows</p>
+                </div>
+            </div>
+            <div class="boss-section" id="yagluth">
+                <div class="image-with-text">
+                    <h4><span>YAGLUTH</span></h4>
+                    <img src="./images/yagluth.jpg" alt="Yagluth Boss">
+                </div>
+                <div class="synopsis">
+                    <p>The Fuling King, Yagluth, is not to be taken lightly. This Boss calls down 
+                        meteors that deal insane amounts of damage and he also breathes fire at 
+                        his enemies.</p>
+                </div>
+                <div class="stats">
+                    <p class="left">Health:</p>
+                    <p>10,000</p>
+                    <p class="left">Resistances:</p>
+                    <p class="resistances">Blunt:   1.00<BR>Pierce:  0.25<BR>Slash:   1.00<BR>
+                        Frost:   0.00<BR>Fire:    0.50<BR>Poison:   0.00<BR>Spirit:  1.00</p>
+                    <p class="left">Weapon<br>Recommendation:</p>
+                    <p>Black Metal Sword</p>
+                </div>
+            </div>
         </div>    
-    </body>
-
+    </main>
     <footer>
-        <p>Morty's Guide &copy; 2022 -Matthew Morton</p>
+        <a href="index.html">Home</a>
         <a href="biomes.html">Biome Guide</a>
         <a href="bosses.html">Boss Guide</a>
-        <a href="site-plan.html">Site Plan</a>
+        <a href="site-plan.html">Site Plan</a>        
     </footer>
 </body>
 </html>
