--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <main>
-        <div class="home-description">
+        <div class="page-description">
             <h1>VALHEIM</h1>
             <p>Valheim is an open world game that can seem complex and hard if you don't have any guidance.
                 Luckily, you have just found the guidance you need. Morty's guide to Valheim is made to help
@@ -89,6 +89,7 @@
         </div>
     </main>
     <footer>
+        <a href="index.html">Home</a>
         <a href="biomes.html">Biome Guide</a>
         <a href="bosses.html">Boss Guide</a>
         <a href="site-plan.html">Site Plan</a>        
