--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <img src="./images/moder.jpg" alt="Moder Boss">
             </div>
             <div class="image-with-text" id="yagluth-home">
-                <a href="/ValheimCalculator/bosses.html#yagluth">
+                <a href="bosses.html#yagluth">
                 <h4><span>YAGLUTH</span></h4></a>
                 <img src="./images/yagluth.jpg" alt="Yagluth Boss">
             </div>
