--- a/index.html
+++ b/index.html
@@ -34,32 +34,32 @@
                 biomes and learn more about them.
             </p>
             <div class="image-with-text" id="meadows-home">
-                <a href="/biomes.html#meadows-biomes-page">
+                <a href="biomes.html#meadows-biomes-page">
                 <h4><span>MEADOWS</span></h4></a>
                 <img src="./images/meadows.jpg" alt="Meadows Biome">
             </div>
             <div class="image-with-text" id="black-forest-home">
-                <a href="/biomes.html#black-forest-biomes-page">
+                <a href="biomes.html#black-forest-biomes-page">
                 <h4><span>BLACK FOREST</span></h4></a>
                 <img src="./images/blackforest.jpg" alt="Black Forest Biome">
             </div>
             <div class="image-with-text" id="swamp-home">
-                <a href="/biomes.html#swamp-biomes-page">
+                <a href="biomes.html#swamp-biomes-page">
                 <h4><span>SWAMP</span></h4></a>
                 <img src="./images/swamp.jpg" alt="Swamp Biome">
             </div>
             <div class="image-with-text" id="mountains-home">
-                <a href="/biomes.html#mountains-biomes-page">
+                <a href="biomes.html#mountains-biomes-page">
                 <h4><span>MOUNTAINS</span></h4></a>
                 <img src="./images/mountains.jpg" alt="Mountain Biome">
             </div>
             <div class="image-with-text" id="plains-home">
-                <a href="/biomes.html#plains-biomes-page">
+                <a href="biomes.html#plains-biomes-page">
                 <h4><span>PLAINS</span></h4></a>
                 <img src="./images/plains.jpg" alt="Plains Biome">
             </div>
             <div class="image-with-text" id="oceans-home">
-                <a href="/biomes.html#ocean-biomes-page">
+                <a href="biomes.html#ocean-biomes-page">
                 <h4><span>OCEANS</span></h4></a>
                 <img src="./images/oceans.jpg" alt="Oceans Biome">
             </div>
@@ -73,22 +73,22 @@
                 that will lead you to victory against these foes.
             </p>
             <div class="image-with-text" id="eikthyr-home">
-                <a href="/bosses.html#eikthyr">
+                <a href="bosses.html#eikthyr">
                 <h4><span>EIKTHYR</span></h4></a>
                 <img src="./images/eikthyr.jpg" alt="Eikthyr Boss">
             </div>
             <div class="image-with-text" id="elder-home">
-                <a href="/bosses.html#elder">
+                <a href="bosses.html#elder">
                 <h4><span>ELDER</span></h4></a>
                 <img src="./images/elder.jpg" alt="Elder Boss">
             </div>
             <div class="image-with-text" id="bonemass-home">
-                <a href="/bosses.html#bonemass">
+                <a href="bosses.html#bonemass">
                 <h4><span>BONEMASS</span></h4></a>
                 <img src="./images/bonemass.jpg" alt="Bonemass Boss">
             </div>
             <div class="image-with-text" id="moder-home">
-                <a href="/bosses.html#moder">
+                <a href="bosses.html#moder">
                 <h4><span>MODER</span></h4></a>
                 <img src="./images/moder.jpg" alt="Moder Boss">
             </div>
