--- a/bosses.html
+++ b/bosses.html
@@ -57,7 +57,7 @@
                 <div class="stats">
                     <p class="left">Health:</p>
                     <p>2,500</p>
-                    <p class="left" class="resist-placement">Resistances:</p>
+                    <p class="left">Resistances:</p>
                     <p class="resistances">Blunt:   1.00<BR>Pierce:  1.00<BR>Slash:   1.00<BR>
                         Frost:   1.00<BR>Fire:    2.00<BR>Poison:   0.00<BR>Spirit:  0.00</p>
                     <p class="left">Weapon<br>Recommendation:</p>
